Added Gzoltar correction & bug fixes, fix docker.
[Details]
- Added the 'correct' command for defects4j_multi, which automatically
  corrects tests marked as failing by GZoltar that were passing in the
  original test suite. These failing tests are suspicious and should
  thus not be marked as failing for the spectrum. Called this
  functionality by default in the 'defects4j_multi coverage' command.
- Small fix for the Docker image that accepts installing all necessary
  packages (the '-y' option for apt-get update).

[Bugs]
Fixed some issues with the coverage command which was causing no
coverage to be collected for certain Closure and Mockito versions.

[File's changed]
	modified:   defects4j_multi_with_jars.patch
	modified:   docker/Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 SHELL ["/bin/bash", "-c"]
 
-RUN apt-get update && apt-get upgrade
+RUN apt-get update -y && apt-get upgrade -y
 
 RUN apt-get install -y git curl build-essential wget zip unzip vim subversion perl bc maven cpanminus
 
